version/0.31/_sources/api/solver/_autosummary/settings/dual_electric_conductivity.rst.txt
:orphan:

.. _dual_electric_conductivity:

dual_electric_conductivity
==========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.dual_electric_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ===============================================

Attribute                                                                                      Summary

====================================================   ===============================================
:ref:`option <option_26>`                                                    Material property method.

:ref:`value <value_15>`                                                       Constant property value.

:ref:`piecewise_linear <piecewise_linear_1>`                         Property piecewise-linear values.

:ref:`piecewise_polynomial <piecewise_polynomial>`         Property piecewise-polynomial coefficients.

:ref:`polynomial <polynomial_1>`                                     Property polynomial coefficients.

:ref:`expression <expression_6>`                                            Property value expression.

:ref:`user_defined_function <user_defined_function>`                   User-defined property function.

====================================================   ===============================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                                              'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

